# GIAIC-Hackathon-II

./: README.md  prompt.md  requirements.txt  vercel.json
.claude/: settings.local.json
Phase_I/: .gitignore  2026-01-08-spconstitution.txt  README.md  main.py  pyproject.toml
Phase_I/.claude/: settings.local.json
Phase_I/.claude/agents/: todo-phase1-reviewer.md
Phase_I/.specify/memory/: constitution.md
Phase_I/history/adr/: 001-layered-architecture-in-memory-storage.md  002-data-validation-pydantic-exceptions.md
Phase_I/history/prompts/001-console-todo/: 001-phase-i-console-todo-specification.spec.prompt.md  002-phase-i-console-todo-implementation-plan.plan.prompt.md  003-phase-i-console-todo-task-breakdown.tasks.prompt.md  005-phase-i-implementation.green.prompt.md  006-phase-i-review-improvements.refactor.prompt.md  007-phase-i-adr-creation.misc.prompt.md
Phase_I/history/prompts/constitution/: 001-create-multi-phase-todo-platform-constitution.constitution.prompt.md
Phase_I/specs/001-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Phase_I/specs/001-console-todo/checklists/: requirements.md
Phase_I/tests/: __init__.py  conftest.py
Phase_I/tests/integration/: __init__.py
Phase_I/tests/unit/: __init__.py  test_todo_model.py  test_todo_service.py  test_todo_store.py
Phase_I/todo_app/: __init__.py  exceptions.py  logging_config.py
Phase_I/todo_app/cli/: formatter.py  menu.py
Phase_I/todo_app/models/: todo.py
Phase_I/todo_app/services/: todo_service.py
Phase_I/todo_app/store/: __init__.py  todo_store.py
(+411 files in other folders)
